Fix spacing issue with style.scss

--- a/app/style.scss
+++ b/app/style.scss
@@ -1,21 +1,15 @@
 $foreground: #FF683A;
 $foreground-hover: #E55E34;
 $light-foreground: #FFC6B2;
-$body-font: Lato,
-Helvetica,
-Arial,
-sans-serif;
-$accent-font: Quicksand,
-Helvetica,
-Arial,
-sans-serif;
+$body-font: Lato, Helvetica, Arial, sans-serif;
+$accent-font: Quicksand, Helvetica, Arial, sans-serif;
 $callout-bg: #fdfdfd;
 $callout-fg: #323232;
 $callout-border: #cccccc;
+
 html {
     font-size: 10px;
 }
-
 body {
     font-family: $body-font;
     color: #000;
@@ -34,12 +28,10 @@ a {
     padding: 0 0 1rem;
     font-family: $accent-font;
 }
-
 .logo {
     color: $foreground;
     text-align: center;
 }
-
 .logo-content {
     margin: 3rem 0 0 0;
     display: inline-block;
@@ -47,9 +39,12 @@ a {
     font-size: 5rem;
     font-weight: normal;
 }
-
 .logo-content-dotorg {
     text-align: right;
+}
+
+.footer-social {
+    margin-bottom: 1.2rem;
 }
 
 .intro-copy {
@@ -58,15 +53,10 @@ a {
     font-size: 3rem;
 }
 
-.footer-social {
-    margin-bottom: 1.2rem;
-}
-
 .action-buttons {
     text-align: center;
     margin: 2rem 0rem;
 }
-
 .action-button {
     display: inline-block;
     font-family: $accent-font;
@@ -81,6 +71,7 @@ a {
     cursor: pointer;
     position: relative;
     text-decoration: none;
+    
     &:hover {
         background: radial-gradient(ellipse at 50% 0%, $light-foreground 0%, $foreground 100%);
     }
@@ -119,6 +110,7 @@ a {
     border-bottom: 0.5rem solid $foreground;
     position: relative;
     display: none;
+    
     p {
         font-size: 1.8rem;
         margin: 2rem 0;
@@ -154,6 +146,7 @@ a {
     color: #fff;
     padding: 2rem 1rem;
     position: relative;
+
     h2 {
         margin: 0;
         font-size: 2rem;
@@ -161,6 +154,7 @@ a {
         font-family: $accent-font;
         color: $foreground;
     }
+
     p {
         font-size: 1.8rem;
         line-height: 1.4;
@@ -202,11 +196,11 @@ a {
     cursor: pointer;
     line-height: 4rem;
     vertical-align: middle;
+
     &:hover {
         background: $foreground-hover;
     }
 }
-
 .secondary-reasons-toggle-icon {
     height: 1.8rem;
     vertical-align: middle;
@@ -228,7 +222,6 @@ a {
 .legal {
     display: none;
 }
-
 .legal-toggled {
     .legal {
         display: block;
@@ -248,6 +241,7 @@ a {
     transition: transform 0.25s ease-out;
     transition-property: transform, opacity;
     visibility: hidden;
+
     h2 {
         text-align: center;
         font-size: 3rem;
@@ -255,6 +249,7 @@ a {
         font-weight: normal;
         color: $foreground;
     }
+
     .wizard-close {
         position: absolute;
         right: 0;
@@ -262,18 +257,23 @@ a {
         background: $callout-bg;
         border: 0;
     }
+
     .wizard-contents {
         font-size: 1.8rem;
         margin: 2.0rem;
+
         h3 {
             font-size: 2.2rem;
         }
     }
+    
     .wizard-adblocker-present {
         display: none;
     }
+    
     .wizard-adblocker-absent {
         display: none;
+
         .wizard-adblocker-details {
             display: flex;
         }
@@ -285,6 +285,7 @@ a {
             width: 12.8rem;
             line-height: 12.8rem;
             vertical-align: middle;
+
             img {
                 width: 100%;
                 vertical-align: middle;
@@ -292,30 +293,37 @@ a {
         }
         .wizard-adblocker-info {
             flex: 1 1 0;
+
             h4 {
                 margin-top: 0px;
             }
         }
+
         .wizard-adblocker-disclaimer {
             text-align: center;
             font-size: 1.4rem;
             margin-top: 2.0rem;
         }
+
         .wizard-adblocker-install {
             margin-top: 0rem;
             margin-left: 0rem;
         }
     }
+
     .wizard-unknown-browser {
         display: none;
     }
+
     .wizard-loading {
         display: block;
         font-size: 3rem;
         text-align: center;
+
         .spinner {
             width: 10%;
         }
+
         span {
             display: block;
         }
@@ -332,6 +340,7 @@ a {
     .wizard-adblocker-present {
         display: block;
     }
+
     .wizard-loading {
         display: none;
     }
@@ -341,6 +350,7 @@ a {
     .wizard-adblocker-absent {
         display: block;
     }
+
     .wizard-loading {
         display: none;
     }
@@ -350,6 +360,7 @@ a {
     .wizard-unknown-browser {
         display: block;
     }
+
     .wizard-loading {
         display: none;
     }
@@ -365,7 +376,6 @@ footer {
     display: flex;
     justify-content: space-between;
 }
-
 .column {
     flex: 1 1 0;
     padding: 0 1rem;
@@ -375,7 +385,6 @@ footer {
     height: 2rem;
     vertical-align: middle;
 }
-
 .h3-icon {
     height: 1.8rem;
     vertical-align: middle;
@@ -392,10 +401,10 @@ footer {
         transform: rotate(360deg);
     }
 }
-
 .spinner {
     display: inline-block;
     width: 32px;
+
     img {
         width: 100%;
         animation: spin 2s ease-out infinite;
